client/public/src/er-shell/style/stylesheets/screen.css
/* ... */
/* line 59, ../sass/pages/_login-dialog.scss */
#loginDialog /deep/ .close-button {
  position: absolute;
  top: 0px;
  right: 0px;
  width: 20px;
  height: 20px;
  text-align: center;
  color: black;
  text-decoration: none;
}
/* line 68, ../sass/pages/_login-dialog.scss */
#loginDialog /deep/ .close-button:hover {
  cursor: pointer;
  cursor: hand;
}
/* line 74, ../sass/pages/_login-dialog.scss */
#loginDialog /deep/ a {
  color: #652218;
}

/* line 1, ../sass/pages/_home.scss */
.snippet {
  height: 300px;
  background-color: white;
  margin: 20px;
  color: black;
}
/* line 9, ../sass/pages/_home.scss */
.snippet h1 {
  display: block;
  margin-left: 30px;
  padding-top: 10px;
}
/* line 16, ../sass/pages/_home.scss */
.snippet p {
  padding-top: 10px;
}
/* line 20, ../sass/pages/_home.scss */
.snippet .info {
  margin: 20px;
}
/* line 24, ../sass/pages/_home.scss */
.snippet .thumbnail {
  width: 200px;
  height: 200px;
}
/* line 29, ../sass/pages/_home.scss */
.snippet .thumb-container {
  float: left;
  margin-right: 40px;
}

/* line 1, ../sass/pages/_scaffold.scss */
core-header-panel {
  background: white;
}

/* line 4, ../sass/pages/_scaffold.scss */
core-toolbar {
  background-color: #F16236;
}

/* line 8, ../sass/pages/_scaffold.scss */
#navheader {
  background-color: #F16236;
}

/* line 12, ../sass/pages/_scaffold.scss */
.content {
  padding: 20px;
}

/* line 16, ../sass/pages/_scaffold.scss */
#drawer /deep/ #mainContainer {
  background-color: #F4F4F4;
}

/* line 22, ../sass/pages/_scaffold.scss */
#drawer /deep/ #side-menu {
  background-color: white;
}

/* line 28, ../sass/pages/_scaffold.scss */
#main-panel /deep/ #mainContainer {
  background-color: #F4F4F4;
}

/* drawer is always visible on a wide screen
   so menu button isn't required */
/* line 35, ../sass/pages/_scaffold.scss */
core-drawer-panel:not([narrow]) #navicon {
  display: none;
}

/* line 1, ../sass/pages/_app-modal.scss */
#appDialog {
  width: 90%;
  height: 90%;
  display: flex;
  flex-flow: row;
  align-items: center;
}
/* line 8, ../sass/pages/_app-modal.scss */
#appDialog /deep/ #scroller {
  min-width: 100%;
  min-height: 100%;
  display: flex;
  flex-flow: column;
  align-items: center;
  justify-content: center;
}
/* line 17, ../sass/pages/_app-modal.scss */
#appDialog #app-container {
  align-self: center !important;
}
/* line 23, ../sass/pages/_app-modal.scss */
#appDialog .close-button {
  position: fixed;
  top: 0px;
  right: 0px;
  width: 40px;
  height: 40px;
  text-align: center;
  color: white;
  text-decoration: none;
  font-size: 20px;
  font-weight: 300;
}
/* line 34, ../sass/pages/_app-modal.scss */
#appDialog .close-button:hover {
  cursor: pointer;
  cursor: hand;
}
@media (max-width: 640px) {
  /* line 1, ../sass/pages/_app-modal.scss */
  #appDialog {
    width: 100%;
    height: 100%;
  }
  /* line 44, ../sass/pages/_app-modal.scss */
  #appDialog .close-button {
    color: black;
  }
}

/* line 6, ../../../er-apps/PitchDial/main.scss */
#pitch-dial .container-toplevel {
  position: relative;
  border-radius: 5px;
  border-width: 3px;
  border-color: #CCCCCC;
  width: 100%;
}
/* line 16, ../../../er-apps/PitchDial/main.scss */
#pitch-dial .container-toplevel::before {
  display: block;
  padding-top: 120%;
  content: '';
}
/* line 21, ../../../er-apps/PitchDial/main.scss */
#pitch-dial .container {
  position: absolute;
  top: 0;
  left: 0;
  bottom: 0;
  right: 0;
  margin: 5px;
  padding: 5px;
}
/* line 35, ../../../er-apps/PitchDial/main.scss */
#pitch-dial #dial-container {
  position: absolute;
  top: 10%;
  width: 100%;
}
/* line 39, ../../../er-apps/PitchDial/main.scss */
#pitch-dial #dial-container canvas {
  width: 100%;
}
/* line 55, ../../../er-apps/PitchDial/main.scss */
#pitch-dial button {
  width: 30%;
  height: 7%;
  text-overflow: clip;
  border: none;
  border-bottom: solid;
  border-width: 1px;
  border-color: #eeeeee;
  background-color: #ffffff;
}
/* line 66, ../../../er-apps/PitchDial/main.scss */
#pitch-dial button:focus {
  outline: 0;
}
/* line 71, ../../../er-apps/PitchDial/main.scss */
#pitch-dial button:hover {
  cursor: pointer;
}
/* line 75, ../../../er-apps/PitchDial/main.scss */
#pitch-dial button:active {
  border-bottom: solid;
}

/* line 2, ../../../er-apps/SingGraph/main.scss */
#sing-graph {
  /* Resize Window */
  /* Indicator line */
}
/* line 4, ../../../er-apps/SingGraph/main.scss */
#sing-graph .start::before {
  content: "Start";
}
/* line 8, ../../../er-apps/SingGraph/main.scss */
#sing-graph .pause::before {
  content: "Pause";
}
/* line 12, ../../../er-apps/SingGraph/main.scss */
#sing-graph .resume::before {
  content: "Resume";
}
/* line 16, ../../../er-apps/SingGraph/main.scss */
#sing-graph .container {
  margin: 5px;
  padding: 5px;
}
/* line 25, ../../../er-apps/SingGraph/main.scss */
#sing-graph .svg-container {
  display: inline-block;
  position: relative;
  width: 100%;
  padding-bottom: 46%;
  vertical-align: middle;
  overflow: hidden;
  /* Axis */
}
/* line 37, ../../../er-apps/SingGraph/main.scss */
#sing-graph .svg-container .axis .tick text {
  fill: black;
  font-size: 0.7em;
}
/* line 42, ../../../er-apps/SingGraph/main.scss */
#sing-graph .svg-container .axis path, #sing-graph .svg-container .axis line {
  fill: none;
  stroke: black;
  shape-rendering: crispEdges;
  stroke-width: 1px;
}
/* line 51, ../../../er-apps/SingGraph/main.scss */
#sing-graph .svg-content {
  display: inline-block;
  position: absolute;
  top: 0;
  left: 0;
}
/* line 58, ../../../er-apps/SingGraph/main.scss */
#sing-graph #overlay, #sing-graph #overlay-content {
  margin: auto;
  width: 100%;
  height: 100%;
  position: absolute;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  z-index: 1;
}
/* line 70, ../../../er-apps/SingGraph/main.scss */
#sing-graph #overlay {
  background-color: black;
  opacity: .5;
}
/* ... */

